# PRISM

./: .gitignore  README.md  app.py  feedback_log.json  main.py  pyproject.toml  requirements.txt
core/: __init__.py  correlation_engine.py  hitl.py  ingestion.py  registry.py  report.py  report_generator.py
detectors/: __init__.py  class_imbalance.py  data_leakage.py  data_quality.py  distribution_shift.py  metric_mismatch.py  overfitting.py
domain/: __init__.py  rules.py
evaluation/: __init__.py  benchmark.py  injector.py
notebooks/: demo.py
samples/: churn_model.pkl  churn_test.csv  churn_train.csv  fraud_model.pkl  fraud_test.csv  fraud_train.csv  overfit_model.pkl  overfit_test.csv  overfit_train.csv
scripts/: generate_sample_data.py
tests/: test_app.py  test_correlation_engine.py  test_detectors.py  test_domain_rules.py  test_evaluation.py  test_hitl.py  test_ingestion.py  test_report_generator.py
