[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "mlfie"
version     = "1.0.0"
description = "ML Failure Intelligence Engine — development-time diagnostic framework"
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.9"

keywords = [
  "machine-learning", "debugging", "model-diagnosis",
  "mlops", "data-science", "failure-analysis",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scipy>=1.11.0",
]

[project.optional-dependencies]
ui      = ["streamlit>=1.28.0"]
xgboost = ["xgboost>=2.0.0"]
dev     = ["pytest>=7.4.0", "black", "ruff"]
all     = ["mlfie[ui,xgboost,dev]"]

[project.scripts]
mlfie = "main:main"

[project.urls]
Homepage    = "https://github.com/your-username/mlfie"
Issues      = "https://github.com/your-username/mlfie/issues"